<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/margin_medium"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cv_height"
    android:paddingRight="@dimen/margin_medium_3"
    android:paddingLeft="@dimen/margin_medium_3"
    android:paddingTop="@dimen/margin_medium">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/cv_img_height"
        app:cardCornerRadius="@dimen/cv_corner_radius"
        android:id="@+id/layout_img_view">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/img_view_near_by"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/dhaka_westeen"/>

            <ImageView
                android:layout_width="@dimen/side_ic"
                android:layout_height="@dimen/side_ic"
                android:src="@drawable/ic_turned_in_not_black_24dp"
                android:layout_margin="@dimen/margin_medium_2"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/color_primary"
                android:text="$99/day"
                android:textColor="@color/color_bg"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold"
                android:layout_margin="@dimen/margin_medium_2"
                android:padding="@dimen/margin_medium"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"/>

            <ImageView
                android:layout_width="@dimen/side_ic"
                android:layout_height="@dimen/side_ic"
                android:id="@+id/img_star"
                android:padding="@dimen/margin_small"
                android:src="@drawable/ic_star_black_24dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:layout_marginLeft="@dimen/margin_medium_2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_rating"
                android:textStyle="bold"
                android:textSize="@dimen/text_smaller"
                android:text="@string/lbl_rating_val"
                android:layout_toEndOf="@+id/img_star"
                android:textColor="@color/color_bg"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_medium_3"
                android:layout_alignParentBottom="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_total_rating"
                android:textSize="@dimen/text_smaller"
                android:text="@string/lbl_rating_desc"
                android:layout_toEndOf="@+id/lbl_rating"
                android:textColor="@color/color_bg"
                android:layout_marginBottom="@dimen/margin_medium_3"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotel_name"
        android:id="@+id/lbl_place"
        android:textStyle="bold"
        android:textSize="@dimen/text_regular"
        android:textColor="@color/color_dark"
        android:layout_below="@+id/layout_img_view"
        android:layout_marginTop="@dimen/margin_medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_address"
        android:id="@+id/lbl_address"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/text_small"
        android:layout_below="@id/lbl_place"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_discount"
        android:id="@+id/lbl_promotion"
        android:textSize="@dimen/text_regular"
        android:textStyle="bold"
        android:textColor="@color/color_accent"
        android:layout_below="@+id/layout_img_view"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/margin_medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_facility"
        android:id="@+id/lbl_accessories"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/text_small"
        android:layout_below="@id/lbl_promotion"
        android:layout_alignParentRight="true"/>

</RelativeLayout>